<resources>
    <string name="app_name">网红时代</string>
    <string name="bottom_radio_head">首页</string>
    <string name="bottom_radio_direct">排行</string>
    <string name="bottom_radio_look">关注</string>
    <string name="bottom_radio_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_cache_text">当前缓存：111MB</string>
    <string name="user_clear_cache">清除图片缓存</string>
    <string name="user_recommed_friend">推荐给朋友</string>
    <string name="user_check_version">检查新版本</string>
    <string name="user_now_verson">当前版本1.0.0</string>
    <string name="search_find">搜索</string>
    <string name="chat_send">发送</string>
    <string name="youke_login">游客登录</string>
    <string name="login_text">登录</string>
    <string name="_62">+62</string>
    <string name="person_level">等级</string>
    <string name="_11">11</string>
    <string name="_217">217</string>
    <string name="person_id">好声音ID</string>
    <string name="person_name">昵称</string>
    <string name="person_message">个人信息</string>
    <string name="person_money">存款</string>
    <string name="_1000000">1000000</string>
    <string name="person_k">K币</string>
    <string name="person_score">积分</string>
    <string name="_1212">1212</string>
    <string name="_12249021hr012hr91">12249021hr012hr91</string>
    <string name="person_sign">个性签名</string>
    <string name="message_center">消息中心</string>
    <string name="message_page">消息页面</string>
    <string name="privilege_center">我的特权</string>
    <string name="privilege_page">特权页面</string>
    <string name="recharge_center">充值中心</string>
    <string name="recharge_page">充值账号:</string>
    <string name="search_room">搜索房间</string>
    <string name="setting_setting">设置中心</string>
    <string name="anchor_actor">主播</string>
    <string name="anchor_home">排行</string>
    <string name="my_follow">关注</string>
    <string name="no_follow">暂无关注</string>
    <string name="receive_gift">收礼数量</string>
    <string name="paihang">排行</string>
    <string name="rank_list">排行榜</string>
    <string name="person_center">我</string>
    <string name="username">username</string>
    <string name="recharge">充值中心</string>
    <string name="message">我的消息</string>
    <string name="privilege">我的特权</string>
    <string name="setting">设置中心</string>
    <string name="_50k">5元=62.5万k币</string>
    <string name="_110k">10元=125万k币</string>
    <string name="_220k">20元=250万k币</string>
    <string name="_575k">50元=625万k币</string>
    <string name="_1200k">100元=1250万k币</string>
    <string name="_2400k">200元=2500万k币</string>
    <string name="_50b">5元</string>
    <string name="_110b">10元</string>
    <string name="_220b">20元</string>
    <string name="_575b">50元</string>
    <string name="_1200b">100元</string>
    <string name="_2400b">200元</string>
    <string name="recharge_money_number">选择充值的金额:</string>
    <string name="confirm_pay">确定充值</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="input_userid">请输入您的id</string>
    <string name="input_user_password">请输入您的密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_user">注册用户</string>
    <string name="user_help">用户帮助</string>
    <string name="my_service">客服中心</string>
    <string name="history_text">历史记录</string>
    <string name="register_text">注册用户</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="register_text_user">注册</string>
    <string name="input_user_yanzhen">验证码</string>
    <string name="recive_yanzhen">获取验证码</string>
    <string name="dai_recharge_center">代理充值</string>
    <string name="complete_recharge">充值详情</string>
</resources>
