<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fubang.wanghong.ui.PersonActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_reheight">
        <ImageView
            android:id="@+id/person_back_btn"
            android:layout_margin="@dimen/person_image_left"
            android:layout_centerVertical="true"
            android:src="@mipmap/btn_title_black_back"
            android:layout_width="@dimen/person_image_width"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:textSize="@dimen/person_tv"
            android:text="@string/person_message"
            android:textColor="@color/my_text_center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/person_tv_height" />
    </RelativeLayout>
    <View
        android:background="@color/my_center_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_linear_height">
        <TextView
            android:text="@string/person_name"
            style="@style/person_message_tag" />
        <TextView
            android:id="@+id/person_calias"
            android:text="@string/_217"
            style="@style/person_message_name"/>
    </LinearLayout>
    <View
        android:background="@color/my_center_line"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/person_line_margin"
        android:layout_marginRight="@dimen/person_line_margin"
        android:layout_height="@dimen/half_line"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_linear_height">
        <TextView
            android:text="@string/person_id"
            style="@style/person_message_tag" />
        <TextView
            android:text="@string/_217"
            android:id="@+id/person_id"
            style="@style/person_message_name"/>
    </LinearLayout>
    <View
        android:background="@color/my_center_line"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/person_line_margin"
        android:layout_marginRight="@dimen/person_line_margin"
        android:layout_height="@dimen/half_line"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_linear_height">
        <TextView
            android:text="@string/person_level"
            style="@style/person_message_tag" />
        <TextView
            android:text="@string/_11"
            android:id="@+id/person_level"
            style="@style/person_message_name"/>
    </LinearLayout>
    <View
        android:background="@color/my_center_line"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/person_line_margin"
        android:layout_marginRight="@dimen/person_line_margin"
        android:layout_height="@dimen/half_line"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_linear_height">
        <TextView
            android:text="@string/person_money"
            style="@style/person_message_tag" />
        <TextView
            android:text="@string/_1000000"
            android:id="@+id/person_deposit"
            style="@style/person_message_name"/>
    </LinearLayout>
    <View
        android:background="@color/my_center_line"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/person_line_margin"
        android:layout_marginRight="@dimen/person_line_margin"
        android:layout_height="@dimen/half_line"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_linear_height">
        <TextView
            android:text="@string/person_k"
            style="@style/person_message_tag" />
        <TextView
            android:text="@string/person_k"
            android:id="@+id/person_kbi"
            style="@style/person_message_name"/>
    </LinearLayout>
    <View
        android:background="@color/my_center_line"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/person_line_margin"
        android:layout_marginRight="@dimen/person_line_margin"
        android:layout_height="@dimen/half_line"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_linear_height">
        <TextView
            android:text="@string/person_score"
            style="@style/person_message_tag" />
        <TextView
            android:text="@string/_1212"
            android:id="@+id/person_score"
            style="@style/person_message_name"/>
    </LinearLayout>
    <View
        android:background="@color/my_center_line"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/person_line_margin"
        android:layout_marginRight="@dimen/person_line_margin"
        android:layout_height="@dimen/half_line"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_linear_height">
        <TextView
            android:text="@string/person_sign"
            style="@style/person_message_tag" />
    </LinearLayout>
    <TextView
        android:text="@string/_12249021hr012hr91"
        android:layout_margin="@dimen/person_line_margin"
        android:textSize="18sp"
        android:id="@+id/person_cidiograph"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
