<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fubang.wanghong.ui.DaiRechargeAcitivity">
    <RelativeLayout
        android:background="@color/bottom_radio_checked_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recharge_reheight">
        <ImageView
            android:id="@+id/dai_recharge_back_btn"
            android:layout_centerVertical="true"
            android:src="@mipmap/lookleft_icon"
            android:layout_width="@dimen/recharge_image_width"
            android:layout_height="@dimen/recharge_image_width" />
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/dai_recharge_center"
            android:textColor="@color/home_tab_backgroud"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recharge_tvheight" />
    </RelativeLayout>

    <View
        android:background="@color/my_center_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dai_recharge_user_tv"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="@drawable/tv_shape"
            android:text="@string/recharge_page"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/dai_recharge_kbi_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#d10000"
            android:background="@drawable/tv_shape"
            android:text="余额: 0 元"
            android:layout_height="match_parent" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/recharge_money_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/dai_recharge_group"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/dai_recharge_5"
                android:button="@null"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:text="@string/_50b"
                android:background="@drawable/recharge_select"
                android:layout_width="120dp"
                android:layout_height="70dp"
                />
            <RadioButton
                android:gravity="center"
                android:id="@+id/dai_recharge_10"
                android:button="@null"
                android:layout_marginLeft="10dp"
                android:text="@string/_110b"
                android:background="@drawable/recharge_select"
                android:layout_width="120dp"
                android:layout_height="70dp"
                />
            <RadioButton
                android:gravity="center"
                android:id="@+id/dai_recharge_20"
                android:button="@null"
                android:layout_marginLeft="10dp"
                android:text="@string/_220b"
                android:background="@drawable/recharge_select"
                android:layout_width="120dp"
                android:layout_height="70dp"
                />
            <RadioButton
                android:gravity="center"
                android:id="@+id/dai_recharge_50"
                android:button="@null"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="-380dp"
                android:text="@string/_575b"
                android:background="@drawable/recharge_select"
                android:layout_width="110dp"
                android:layout_height="70dp"
                />
            <RadioButton
                android:gravity="center"
                android:id="@+id/dai_recharge_100"
                android:button="@null"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="10dp"
                android:text="@string/_1200b"
                android:background="@drawable/recharge_select"
                android:layout_width="130dp"
                android:layout_height="70dp"
                />
            <RadioButton
                android:gravity="center"
                android:id="@+id/dai_recharge_200"
                android:button="@null"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="10dp"
                android:text="@string/_2400b"
                android:background="@drawable/recharge_select"
                android:layout_width="130dp"
                android:layout_height="70dp"
                />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="@color/home_tab_backgroud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/zhifubao"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>
    <Button
        android:id="@+id/dai_recharge_confirm_btn"
        android:layout_margin="10dp"
        android:text="@string/confirm_pay"
        android:background="#9EEA6A"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:text="友情提示:"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="1. 人民币和钱包比例=1:1"
        android:textColor="@color/home_room_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="2. 如有疑问,您可以咨询QQ15888620878"
        android:textColor="@color/home_room_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
